# TheoryOfProgrammingLanguages

./: README.md
Book_EL/: AST.cpp  AST.hpp  CMakeLists.txt  main.cpp  print.cpp
InClassWork/pl-notes/el/: CMakeLists.txt  el.cpp  el.hpp  main.cpp  print.cpp
lambda/: CMakeLists.txt  ast.cpp  ast.hpp  main.cpp  substitute.cpp  substitute.hpp
